--- a/src/client/app/applications/wishes/components/filter-card/filter-card.component.scss
+++ b/src/client/app/applications/wishes/components/filter-card/filter-card.component.scss
@@ -6,7 +6,8 @@
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+  flex-direction: column;
+  width: 100%;
 	width: 350px;
 	height: 350px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
