--- a/src/client/app/applications/wishes/components/wish-list/wish-list.component.scss
+++ b/src/client/app/applications/wishes/components/wish-list/wish-list.component.scss
@@ -273,6 +273,6 @@
   color: $blue;
 }
 
-.margin-rlb-10 {
-  margin: 0px 10px 10px 10px;
+.margin-b-10 {
+  margin: 0px 0px 20px 0px;
 }
